--- a/index.css
+++ b/index.css
@@ -132,7 +132,7 @@ input[type='file'] {
 }
 .text-block {
   position: absolute;
-  background-color: white;
+  background-color:transparent;
   color: black;
   padding-left: 20px;
   padding-right: 20px;
